--- a/ArquivosWeb/usuario/css/Update.css
+++ b/ArquivosWeb/usuario/css/Update.css
@@ -7,14 +7,18 @@
 }
 form {
 	padding: 10px;
-	float: left;
 }
 input {
 	margin: 10px;
 }
-#log {
-	float: right;
-	margin-right: 100px;
-	margin-top: 10px;
-	height: 100px;
+label {
+    display: inline-block;
+    width: 90px;
+    text-align: right;
+}
+#butao{
+	margin-left: 250px;
+}
+body{
+	background: #00D4D6;
 }
